// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paragraph snapshots Paragraph: 0 1`] = `
<p
  className="typography-0-1-5 typography__7-0-1-12 paragraph-0-1-1 paragraph-0-1-1 paragraph__3-0-1-4"
>
  Paragraph test string
</p>
`;

exports[`paragraph snapshots Paragraph: 1 1`] = `
<p
  className="typography-0-1-19 typography__5-0-1-24 paragraph-0-1-15 paragraph-0-1-15 paragraph__1-0-1-16"
  data-sketch-symbol="Paragraph 1"
>
  Paragraph test string
</p>
`;

exports[`paragraph snapshots Paragraph: 2 1`] = `
<p
  className="typography-0-1-33 typography__6-0-1-39 paragraph-0-1-29 paragraph-0-1-29 paragraph__2-0-1-31"
  data-sketch-symbol="Paragraph 2"
>
  Paragraph test string
</p>
`;

exports[`paragraph snapshots Paragraph: 3 1`] = `
<p
  className="typography-0-1-47 typography__7-0-1-54 paragraph-0-1-43 paragraph-0-1-43 paragraph__3-0-1-46"
  data-sketch-symbol="Paragraph 3"
>
  Paragraph test string
</p>
`;
